--- a/proyecto-final-coder/style/style.css
+++ b/proyecto-final-coder/style/style.css
@@ -1,13 +1,13 @@
-body{
+body {
 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color:darkolivegreen;
-
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-header{
+/*nav*/
+header {
 
     position: fixed;
     top: 0;
@@ -17,14 +17,14 @@ header{
 
 }
 
-.container{
+.container_nav {
 
     width: 1280px;
     margin: auto;
 
 }
 
-.nav_checkbox{
+.nav_checkbox {
 
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -33,7 +33,7 @@ header{
 
 }
 
-.logo{
+.logo {
 
     text-decoration: none;
     color: white;
@@ -41,21 +41,21 @@ header{
 
 }
 
-.tab-nav{
+.tab-nav {
 
     outline: none;
     display: none;
 
 }
 
-.label{
+.label {
 
     display: none;
     color: white;
 
 }
 
-.burger{
+.burger {
 
     width: 35px;
     height: 5px;
@@ -64,7 +64,7 @@ header{
 
 }
 
-.content_nav{
+.content_nav {
 
     grid-column: 3;
     list-style: none;
@@ -73,14 +73,14 @@ header{
 
 }
 
-.content_nav li{
+.content_nav li {
 
     display: inline-block;
     padding-right: 10px;
 
 }
 
-.content_nav li a{
+.content_nav li a {
 
     text-decoration: none;
     color: white;
@@ -88,7 +88,7 @@ header{
 
 }
 
-.content_nav li a::after{
+.content_nav li a::after {
 
     content: '';
     display: block;
@@ -103,13 +103,13 @@ header{
 
 }
 
-.content_nav li a:hover::after{
+.content_nav li a:hover::after {
 
     transform: scale(1, 1);
 
 }
 
-.content_section{
+.content_section {
 
     height: 120vh;
     background-image: url(/images/fondo-hero.jpg);
@@ -122,20 +122,79 @@ header{
 
 
 }
-footer{
-    background-color: rgba(128, 128, 128, 0.482);
+
+/*nav*/
+/*main index*/
+.card {
+    display: flex;
+    height: fit-content;
+    margin: 2rem;
+}
+
+.card-img-top {
+    border: 1px;
+    border-color: black;
+    border-style: solid;
+    border-radius: 2px;
+}
+
+/*main index*/
+
+/* main e-commerce */
+.info_proyecto {
+    display: flex;
+    height: 23rem;
+    border: 1px;
+    border-radius: 5px;
+    border-style: solid;
+    border-color: black;
+    background-color: rgb(250, 247, 81);
+}
+
+.titulo_proyecto {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    background-color: aliceblue;
+    padding: 1rem;
+}
+
+.texto_info {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    text-align: justify;
+    padding: 2rem;
+}
+
+.imagen_proyecto {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    border: 1px;
+    border-radius: 5px;
+    border-style: solid;
+    border-color: black;
+    background-color: aliceblue;
+}
+
+/* main e-commerce */
+
+footer {
+    background-color: rgba(128, 128, 128, 0.342);
     display: flex;
     border-color: black;
     border-style: ridge;
-    align-items:right;
-    justify-content:right;
+    align-items: right;
+    justify-content: right;
     padding-right: 1%;
+    text-align: end;
 }
 
+/*responsive*/
+@media screen and (max-width: 1280px) {
 
-@media screen and (max-width: 1280px){
-
-    .container{
+    .container_nav {
 
         width: 100%;
 
@@ -143,9 +202,9 @@ footer{
 
 }
 
-@media screen and (max-width: 770px){
+@media screen and (max-width: 770px) {
 
-    .label{
+    .label {
 
         display: grid;
         cursor: pointer;
@@ -154,7 +213,7 @@ footer{
 
     }
 
-    .content_nav{
+    .content_nav {
 
         display: grid;
         grid-template-columns: 1fr;
@@ -166,17 +225,17 @@ footer{
 
     }
 
-    .nav_checkbox input:checked ~ .content_nav{
+    .nav_checkbox input:checked~.content_nav {
 
         max-height: 500px;
 
     }
 
-    .content_nav li{
+    .content_nav li {
 
         padding: 15px 0px;
 
     }
-
-
 }
+
+/*responsive*/
