--- a/proyecto-final-coder/style/style.css
+++ b/proyecto-final-coder/style/style.css
@@ -1,241 +1,182 @@
 body {
-
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-/*nav*/
 header {
-
-    position: fixed;
-    top: 0;
-    z-index: 1;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.404);
-
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.404);
 }
 
-.container_nav {
-
-    width: 1280px;
-    margin: auto;
-
+.conteiner_nav {
+  width: 1280px;
+  margin: auto;
 }
 
 .nav_checkbox {
-
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    padding: 10px 0px;
-
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  padding: 10px 0px;
 }
 
 .logo {
-
-    text-decoration: none;
-    color: white;
-    padding-left: 10px;
-
+  text-decoration: none;
+  color: white;
+  padding-left: 10px;
 }
 
 .tab-nav {
-
-    outline: none;
-    display: none;
-
+  outline: none;
+  display: none;
 }
 
 .label {
-
-    display: none;
-    color: white;
-
+  display: none;
+  color: white;
 }
 
 .burger {
-
-    width: 35px;
-    height: 5px;
-    background-color: white;
-    margin-top: 5px;
-
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin-top: 5px;
 }
 
 .content_nav {
-
-    grid-column: 3;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
+  grid-column: 3;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
-
 .content_nav li {
-
-    display: inline-block;
-    padding-right: 10px;
-
+  display: inline-block;
+  padding-right: 10px;
 }
-
 .content_nav li a {
-
-    text-decoration: none;
-    color: white;
-    position: relative;
-
+  text-decoration: none;
+  color: white;
+  position: relative;
 }
-
-.content_nav li a::after {
-
-    content: '';
-    display: block;
-    height: 2px;
-    background-color: white;
-    position: absolute;
-    left: 0;
-    right: 0;
-    transform-origin: right;
-    transform: scale(0, 1);
-    transition: transform ease-in-out 0.5s;
-
-}
-
 .content_nav li a:hover::after {
-
-    transform: scale(1, 1);
-
+  transform: scale(1, 1);
+}
+.content_nav li a::after {
+  content: "";
+  display: block;
+  height: 2px;
+  background-color: white;
+  position: absolute;
+  left: 0;
+  right: 0;
+  transform-origin: right;
+  transform: scale(0, 1);
+  transition: transform ease-in-out 0.5s;
 }
 
 .content_section {
-
-    height: 120vh;
-    background-image: url(/images/fondo-hero.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-
-
+  height: 120vh;
+  background-image: url(/images/fondo-hero.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: grid;
+  justify-items: center;
+  align-items: center;
 }
 
-/*nav*/
-/*main index*/
 .card {
-    display: flex;
-    height: fit-content;
-    margin: 2rem;
+  display: flex;
+  height: fit-content;
+  margin: 2rem;
 }
-
 .card-img-top {
-    border: 1px;
-    border-color: black;
-    border-style: solid;
-    border-radius: 2px;
+  border: 1px;
+  border-color: black;
+  border-style: solid;
+  border-radius: 2px;
 }
 
-/*main index*/
-
-/* main e-commerce */
 .info_proyecto {
-    display: flex;
-    height: 23rem;
-    border: 1px;
-    border-radius: 5px;
-    border-style: solid;
-    border-color: black;
-    background-color: rgb(250, 247, 81);
+  display: flex;
+  height: 23rem;
+  border: 1px;
+  border-radius: 5px;
+  border-style: solid;
+  border-color: black;
+  background-color: rgb(250, 247, 81);
 }
 
 .titulo_proyecto {
-    text-align: center;
-    display: flex;
-    align-items: center;
-    background-color: aliceblue;
-    padding: 1rem;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  background-color: aliceblue;
+  padding: 1rem;
 }
 
 .texto_info {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    text-align: justify;
-    padding: 2rem;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  text-align: justify;
+  padding: 2rem;
 }
 
 .imagen_proyecto {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    border: 1px;
-    border-radius: 5px;
-    border-style: solid;
-    border-color: black;
-    background-color: aliceblue;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  border: 1px;
+  border-radius: 5px;
+  border-style: solid;
+  border-color: black;
+  background-color: aliceblue;
 }
-
-/* main e-commerce */
 
 footer {
-    background-color: rgba(128, 128, 128, 0.342);
-    display: flex;
-    border-color: black;
-    border-style: ridge;
-    align-items: right;
-    justify-content: right;
-    padding-right: 1%;
-    text-align: end;
+  background-color: rgba(128, 128, 128, 0.342);
+  display: flex;
+  border-color: black;
+  border-style: ridge;
+  align-items: right;
+  justify-content: right;
+  padding-right: 1%;
+  text-align: end;
 }
 
-/*responsive*/
 @media screen and (max-width: 1280px) {
-
-    .container_nav {
-
-        width: 100%;
-
-    }
-
+  .container_nav {
+    width: 100%;
+  }
 }
-
 @media screen and (max-width: 770px) {
-
-    .label {
-
-        display: grid;
-        cursor: pointer;
-        grid-column: 3;
-        padding-right: 10px;
-
-    }
-
-    .content_nav {
-
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-column: 1/4;
-        text-align: center;
-        max-height: 0;
-        overflow: hidden;
-        transition: all ease-in-out 0.6s;
-
-    }
-
-    .nav_checkbox input:checked~.content_nav {
-
-        max-height: 500px;
-
-    }
-
-    .content_nav li {
-
-        padding: 15px 0px;
-
-    }
+  .label {
+    display: grid;
+    cursor: pointer;
+    grid-column: 3;
+    padding-right: 10px;
+  }
+  .content_nav {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-column: 1/4;
+    text-align: center;
+    max-height: 0;
+    overflow: hidden;
+    transition: all ease-in-out 0.6s;
+  }
+  .nav_checkbox input:checked ~ .content_nav {
+    max-height: 500px;
+  }
+  .content_nav li {
+    padding: 15px 0px;
+  }
 }
 
-/*responsive*/
+/*# sourceMappingURL=style.css.map */
