--- a/proyecto-final-coder/scss/partials/header.scss
+++ b/proyecto-final-coder/scss/partials/header.scss
@@ -80,7 +80,7 @@ header {
 
 .content_section {
     height: 120vh;
-    background-image: url(/images/fondo-hero.jpg);
+    background-image: url(/images/fondo-hero.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
