--- a/proyecto-final-coder/scss/base/base.scss
+++ b/proyecto-final-coder/scss/base/base.scss
@@ -3,4 +3,15 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+    padding-bottom: 21rem;
+    background-color: #edf6f9;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+a:hover{
+    text-decoration: none;
+    color: black;
 }
